  * Added love.graphics.getCompressedImageFormats.
  * Added ParticleSystem:setQuads.
  * Added SpriteBatch:flush.
  * Added optional duration argument to Joystick:setVibration.
  * Added love.joystick.loadGamepadMappings and love.joystick.saveGamepadMappings.
  * Added Joint:setUserData and Joint:getUserData.
  * Added Body:getWorld.
  * Added love.window.getDisplayName.

  * Deprecated SpriteBatch:bind and SpriteBatch:unbind.
  * Deprecated all uses of the name 'FSAA' in favor of 'MSAA'.
  * Deprecated the 'hdrcanvas' graphics feature enum in favor of getCanvasFormats.
  * Deprecated the 'dxt' and 'bc5' graphics feature enums in favor of getCompressedImageFormats.

  * Fixed shader:getWarnings returning unnecessary information.
  * Fixed love.filesystem.setIdentity breaking in some situations when called multiple times.
  * Fixed a potential crash when Shader objects are garbage collected.
  * Fixed love.graphics.newMesh(vertexcount, ...) causing the Mesh to do instanced rendering.
  * Fixed Mesh:getVertexMap.
  * Fixed Image:refresh generating mipmaps multiple times if mipmap filtering is enabled.
  * Fixed Mesh:setDrawRange when the Mesh has a vertex map set.
  * Fixed internal detection of the 'position' and 'effect' shader functions.
  * Fixed Texture memory leak when Meshes are garbage collected.

  * Renamed all cases of FSAA to MSAA. The FSAA names still exist for backward-compatibility.

  * Updated error message when love.math.setRandomseed(0) is attempted.
  * Updated love.physics.newChainShape to error if the number of arguments is invalid.
  * Updated love-created threads to use names visible in external debuggers.
  * Updated SpriteBatch:unbind to use less VRAM if the SpriteBatch has the static usage hint.
  * Updated love.graphics.newImage, love.image.newImageData, etc. to leave less Lua-owned memory around.

LOVE 0.9.1 [Baby Inspector]
---------------------------

  Released: 2014-04-01

  * Added Source:clone.
  * Added blend mode "screen".